--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,15 +44,18 @@ jobs:
           go-version: '1.23'
 
       - name: Install WebKitGTK dependencies
-        if: matrix.goos == 'linux'
+        if: matrix.goos == 'linux' && matrix.goarch != 'arm64'
         run: |
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.1-dev
-          if [ "${{ matrix.goarch }}" = "arm64" ]; then
-            sudo dpkg --add-architecture arm64
-            sudo apt-get update
-            sudo apt-get install -y gcc-aarch64-linux-gnu libgtk-3-dev:arm64 libwebkit2gtk-4.1-dev:arm64 || true
-          fi
+
+      - name: Install cross-compile dependencies (Linux arm64)
+        if: matrix.goos == 'linux' && matrix.goarch == 'arm64'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y gcc-aarch64-linux-gnu
+          # Install native amd64 headers — CGO cross-compile uses them for type info
+          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.1-dev
 
       - name: Build binary
         env:
@@ -62,7 +65,7 @@ jobs:
         run: |
           if [ "${{ matrix.goos }}" = "linux" ] && [ "${{ matrix.goarch }}" = "arm64" ]; then
             export CC=aarch64-linux-gnu-gcc
-            export PKG_CONFIG_PATH=/usr/lib/aarch64-linux-gnu/pkgconfig
+            export CGO_ENABLED=1
           fi
           go build -ldflags="-s -w" -o ${{ matrix.artifact }} ./cmd/lightshell
 
