Glass-card Nimo aesthetic, scope npm packages under @lightshell
Website: glass blur windows, grain texture canvas, floating dock pill.
npm: rename lightshell -> @lightshell/cli, create-lightshell -> @lightshell/create
to work with granular npm tokens (classic tokens deprecated).

--- a/npm/lightshell/package.json
+++ b/npm/lightshell/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lightshell",
+  "name": "@lightshell/cli",
   "version": "0.1.0",
   "description": "Build desktop apps with JavaScript. Ship them under 5MB.",
   "keywords": ["desktop", "app", "framework", "webview", "native", "macos", "linux"],
