--- a/npm/create-lightshell/package.json
+++ b/npm/create-lightshell/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "create-lightshell",
+  "name": "@lightshell/create",
   "version": "0.1.0",
   "description": "Create a new LightShell desktop app",
   "keywords": ["create", "lightshell", "desktop", "app"],
