Fix npm CLI package: use Node.js launcher shim instead of postinstall
The bin/lightshell file is now a Node.js shim that finds and executes
the platform-specific binary at runtime (like esbuild). This replaces
the broken postinstall approach where the binary wasn't included in
the published package. Also updates README with scoped package names.

--- a/npm/lightshell/package.json
+++ b/npm/lightshell/package.json
@@ -12,9 +12,9 @@
   "bin": {
     "lightshell": "bin/lightshell"
   },
-  "scripts": {
-    "postinstall": "node install.js"
-  },
+  "files": [
+    "bin/"
+  ],
   "optionalDependencies": {
     "@lightshell/darwin-arm64": "0.1.0",
     "@lightshell/darwin-x64": "0.1.0",
