Migrate to lightshell-dev org, add complete docs site, redesign landing page
- Update GitHub remote, Go module path, and npm packages to lightshell-dev org
- Migrate all URLs from lightshell.sh to lightshell.dev
- Add full Starlight documentation site (67 pages): API reference, tutorials,
  guides, concepts, LLM integration docs
- Redesign landing page with draggable window cards on hero background
  and LLM promo section with animated chat window
- Rewrite llms.txt and llms-full.txt with updated API docs
- Update website with desktop showcase section

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,8 +34,8 @@ jobs:
         run: npm run build
 
       # Combine website + docs into a single site
-      # website/ → root (lightshell.sh/)
-      # docs/    → /docs/ (lightshell.sh/docs/)
+      # website/ → root (lightshell.dev/)
+      # docs/    → /docs/ (lightshell.dev/docs/)
       - name: Assemble site
         run: |
           mkdir -p _site
