--- a/npm/lightshell/package.json
+++ b/npm/lightshell/package.json
@@ -6,9 +6,9 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/meherpanguluri/lightshell"
+    "url": "https://github.com/lightshell-dev/lightshell"
   },
-  "homepage": "https://lightshell.sh",
+  "homepage": "https://lightshell.dev",
   "bin": {
     "lightshell": "bin/lightshell"
   },
